Minor Tweaks  - Adjusted Spacing around search bar.  - Fixed Item cards to display product Image  - Added a spot to display stock counts.

--- a/src/components/common/searchbar/searchbarStyles.css
+++ b/src/components/common/searchbar/searchbarStyles.css
@@ -5,7 +5,7 @@
 .searchOuter{
     background-color: lightskyblue;
     max-width: 1000px;
-    margin: 5px auto;
+    margin: 0 auto;
     padding: 5px;
     display: flex;
     justify-content: space-between;
